[tool.poetry]
name = "base62-token"
version = "0.1.0"
description = "Base62 token generation and validation"
authors = ["Jonas Rosenboom <jzr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "base62_token"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
